2010-04-08  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline:
	2010-04-01  Richard Guenther  <rguenther@suse.de>

	PR middle-end/43614
	* tree-ssa-address.c (copy_mem_ref_info): Copy TREE_SIDE_EFFECTS
	and TREE_THIS_VOLATILE.
	(copy_ref_info): Likewise.
	* tree-ssa-operands.c (get_tmr_operands): Check TREE_THIS_VOLATILE.
	* tree.c (build7_stat): Ignore side-effects of all but arg5
	for TARGET_MEM_REF.  Set TREE_THIS_VOLATILE from arg5 of
	TARGET_MEM_REF.

2010-04-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43186
	* params.def (PARAM_MAX_UNROLL_ITERATIONS): New param.
	* doc/invoke.texi (max-completely-peel-loop-nest-depth): Document.
	* tree-ssa-loop-ivcanon.c (tree_unroll_loops_completely): Limit
	unroller iterations.

2010-04-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/43668
	* config/i386/i386.c (setup_incoming_varargs_64): Align stack to
	16byte for FP register save area.

2010-04-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43629
	* tree-ssa-ccp.c (likely_value): Properly look for constant
	values.  Reset all_undefined_operands if we have seen a
	constant value.

2010-04-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/43638
	* config/i386/i386.c (print_operand): Remove 'e' and 'E' code
	handling.

2010-03-31  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2010-03-27  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/43528
	* stor-layout.c (place_field): Check that constant fits into
	unsigned HWI when skipping calculation of MS bitfield layout.

	2010-03-26  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43524
	* config/i386/i386.c (ix86_expand_prologue) [TARGET_STACK_PROBE]:
	Remove invalid assert and wrong comment.

2010-03-31  Richard Guenther  <rguenther@suse.de>

	PR middle-end/43600
	* cgraphunit.c (cgraph_output_in_order): Do not allocate
	temporary data on stack.

2010-03-31  Jie Zhang  <jie@codesourcery.com>

	PR 43562
	* reload.h (caller_save_initialized_p): Declare.