@@ -3,6 +3,12 @@
 	Backport from mainline:
 	2010-04-01  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/43607
+	* ipa-type-escape.c (check_call): Do not access non-existing
+	arguments.
+
+	2010-04-01  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/43614
 	* tree-ssa-address.c (copy_mem_ref_info): Copy TREE_SIDE_EFFECTS
 	and TREE_THIS_VOLATILE.
